Replace broken implementation with working multi-model renderer
- Deleted broken CityEscape.cpp (had green chaos rendering bug)
- Renamed TestModel.cpp to CityEscape.cpp (proven working)
- Updated vcxproj to build new CityEscape.cpp
- Created comprehensive documentation.md
- Current state: 5 models rendering correctly with proper scaling
- Ready for Phase 2: Camera class integration

--- a/CityEscape.vcxproj
+++ b/CityEscape.vcxproj
@@ -104,9 +104,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CityEscape.cpp" />
     <ClCompile Include="GLTexture.cpp" />
     <ClCompile Include="Model_3DS.cpp" />
-    <ClCompile Include="TestModel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
